[package]
name = "image_searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sled = "0.34"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
